--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <div class="nav-links">
           <a href="#"><h1>Home</h1></a>
           <a href="#"><h1>Dashboard</h1></a>
-          <a href="#"><h1>Logout</h1></a>
+          <button><h1>Logout</h1></button>
           <!-- <a href="#"><h1>Login</h1> -->
         </div>
         <h2 class="blog-header">The Tech Blog</h2>
